--- a/Surge.xcodeproj/xcshareddata/xcschemes/Surge.xcscheme
+++ b/Surge.xcodeproj/xcshareddata/xcschemes/Surge.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F8A1E1A919917A79009735E2"
+               BlueprintIdentifier = "OBJ_33"
                BuildableName = "Surge.framework"
                BlueprintName = "Surge"
                ReferencedContainer = "container:Surge.xcodeproj">
@@ -32,22 +32,13 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F84A6AAD19A9A72F007B53E1"
+               BlueprintIdentifier = "OBJ_48"
                BuildableName = "SurgeTests.xctest"
                BlueprintName = "SurgeTests"
                ReferencedContainer = "container:Surge.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F8A1E1A919917A79009735E2"
-            BuildableName = "Surge.framework"
-            BlueprintName = "Surge"
-            ReferencedContainer = "container:Surge.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -64,7 +55,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F8A1E1A919917A79009735E2"
+            BlueprintIdentifier = "OBJ_33"
             BuildableName = "Surge.framework"
             BlueprintName = "Surge"
             ReferencedContainer = "container:Surge.xcodeproj">
@@ -79,15 +70,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F8A1E1A919917A79009735E2"
-            BuildableName = "Surge.framework"
-            BlueprintName = "Surge"
-            ReferencedContainer = "container:Surge.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
